moonlight-rewrite/test/fixtures/CompileFail/GuardEvidenceConstructor.hs
module GuardEvidenceConstructor where

import Moonlight.Rewrite.System (GuardEvidence (..))

forgedGuardEvidence :: GuardEvidence
forgedGuardEvidence = GuardEvidence [] mempty
